kubernete_aws/base/api-node/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-node
  namespace: microservices-demo
  labels:
    app: api-node
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-node
  template:
    metadata:
      labels:
        app: api-node
    spec:
      containers:
      - name: api-node
        image: entransistor/api-node:495e11520ea3a712d4e79e0ccbd90037feb9b29e
        ports:
        - containerPort: 3001
          name: http
        livenessProbe:
          httpGet:
            path: /health
            port: 3001
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /health
            port: 3001
          initialDelaySeconds: 5
          periodSeconds: 10
