kubernete_aws/base/api-node/NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-api-to-postgres
  namespace: microservices-demo
spec:
  podSelector:
    matchLabels:
      app: api-node
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: postgres
    ports:
    - port: 5432
      protocol: TCP
